# imp-proj

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: Dial.svelte
main/: CMakeLists.txt  Kconfig.projbuild  main.c  metronome.c  metronome.h  server.c  server.h  wifi.c  wifi.h
